--- a/.github/ISSUE_TEMPLATE/버그-템플릿.md
+++ b/.github/ISSUE_TEMPLATE/버그-템플릿.md
@@ -7,16 +7,19 @@ assignees: ''
 
 ---
 
-1. 설명
-버그 내용을 간단히 설명해주세요.
+### 1. 설명
+<!--버그 내용을 간단히 설명해주세요.-->
 
-2. 재현 방법
+### 2. 재현 방법
+<!--재현이 가능하면 간단하게 작성해주세요.-->
 1)
 2)
 3)
 
-3. 예상 동작
+### 3. 예상 동작
+<!--정상적인 상황에 어떻게 동작해야 하는지 간단하게 작성해주세요.-->
 어떻게 동작해야 하는지 설명해주세요.
 
-4. 실제 동작
+### 4. 실제 동작
+<!--실제로 어떻게 동작하는지 간단하게 작성해주세요-->
 실제로 어떻게 동작하는지 설명해주세요.
