--- a/.github/ISSUE_TEMPLATE/기능-구현-템플릿.md
+++ b/.github/ISSUE_TEMPLATE/기능-구현-템플릿.md
@@ -7,15 +7,14 @@ assignees: ''
 
 ---
 
-1. 기능 개요
-구현할 기능에 대해 간단히 설명해주세요.
+### 1. 기능 개요
+<!--구현할 기능에 대해 간단히 설명해주세요.-->
 
-2. 상세 설명
+### 2. 상세 설명
+<!--어떤 내용이 구현되어야 할지 구체적으로 작성해주세요.-->
 
-3. 구현 계획
+### 3. 구현 계획
+<!--구현 작업 하위 항목을 작성해주세요-->
 - 작업 1
 - 작업 2
 - 작업 3
-
-4. 관련 이슈
-(선택사항) 관련된 이슈 번호: #
