Update issue templates

--- a/.github/ISSUE_TEMPLATE/기능-개선-템플릿.md
+++ b/.github/ISSUE_TEMPLATE/기능-개선-템플릿.md
@@ -12,9 +12,9 @@ assignees: ''
 
 2. ### 현재 문제점
 <!--현재 기능의 불편한 점이나 부족한 점을 간단하게 작성해주세요.-->
-1) 
-2)
+- 문제점 1
+- 문제점 2
 ### 3. 개선 제안
 <!-- 개선 방안을 간단하게 작성해주세요. -->
-1) 
-2)
+- 방안 1
+- 방안 2
